<resources>
    <string name="app_name">Mi bodega</string>
    <string name="bienvenido">Bienvenido a mi bodega</string>
    <string name="Nombre">Nombre</string>
    <string name="boton">Iniciar</string>
    <string name="mensaje">%s estas usando la version 1.0.1 de Mi Bodega :)</string>
    <string name="descripcion">Esta aplicacion trata sobre un catalogo de alcohol disponible.</string>
    <string name="cont">Contactar</string>
    <string name="deslizo">Deslizo jaja</string>
    <string name="comenzar">Entrar</string>
    <string name="salgo">Salir</string>
    <string name="menu">Bienvenido a esta aplicacion %s, empezamos?</string>
    <string name="infoUsu">Segun nuestros informes te llamas %s\n
y ultimamente has visitado mucho nuestra aplicacion.\n\n
Suponemos que tienes un monton de botellas añadidas a favoritos\n
y que has podido aprender mucho de nuestra informacion bien redactada\n
en la descripcion.\n\n
Besos y vuelve pronto cuando mejore esto.\n
Y un saludo para Felix.</string>

</resources>