<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crema"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuFragment">

   <TextView
       android:id="@+id/textoprov"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/menu"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/BotComenzar"
       />
   <Button
       android:id="@+id/BotComenzar"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/comenzar"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textoprov"
       app:layout_constraintBottom_toTopOf="@+id/BotSalir" />

   <Button
       android:id="@+id/BotSalir"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/salgo"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/BotComenzar"
       app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>